makeup:fix calendar z-index

--- a/src/components/calendar/Calendar.module.css
+++ b/src/components/calendar/Calendar.module.css
@@ -8,7 +8,8 @@
 .calendarHeader {
   display: flex;
   width: fit-content;
-  background-color: lightblue;
+  background-color: white;
   position: sticky;
   top: 0;
+  z-index: 30;
 }
