--- a/src/components/cell/Cell.module.css
+++ b/src/components/cell/Cell.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  border: 1px solid black;
+  border: 1px solid gray;
   display: flex;
   align-items: center;
   justify-content: center;
