--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -7,7 +7,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 45;
   background-color: white;
 }
 .btns {
